--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=LoRaWAN_ESP32
-version=0.0.1
+version=1.0.0
 author=Rop Gonggrijp <rop@gonggri.jp>
 maintainer=Rop Gonggrijp <rop@gonggri.jp>
 sentence=ESP32 'persist' object for using deep sleep in combination with RadioLib LoRaWAN.
@@ -8,4 +8,4 @@ category=Communication
 url=https://github.com/ropg/LoRaWAN_ESP32
 architectures=esp32
 includes=LoRaWAN_ESP32.h
-depends=RadioLib
+depends= RadioLib (>=6.5.0)
